# widlparser

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yaml  .yamllint.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py  test-expected.txt  test.py  widlparser.sublime-project
widlparser/: __init__.py  constructs.py  markup.py  parser.py  productions.py  protocols.py  tokenizer.py
